<?xml version="1.0"?>
<package>
  <name>coord_keyboard</name>
  <version>0.0.0</version>
  <description>The coord_keyboard package uses the package 'keyboard' to take input from the keyboard and publishes them over a topic named 'coord' in the form of a Quaternion. The input has to be in the form of integers separated by a return key. The two integers are x and y coordinates which are taken up by another node to process and send the required command to the arduino. The main aim is to send the goal position to the bot, with respect to the current position, where it navigates to autonomously.</description>

  <maintainer email="saxena.vaibhav96@gmail.com">Vaibhav Saxena</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>keyboard</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>keyboard</run_depend>

  </export>
</package>
